[package]
name = "htww"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "htww"
path = "src/main.rs"
